--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,15 @@ output/*
 # Log file
 *.log
 
+
+
+
 # BlueJ files
 *.ctxt
 *.zip
 **/node_modules
 **/package-lock.json
+*logs*
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
